cmake_minimum_required(VERSION 3.16)
project(opengl_demo LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenGL REQUIRED)
find_package(glfw3 CONFIG REQUIRED)

add_library(glad STATIC src/glad.c)
target_include_directories(glad PUBLIC include)

add_executable(app main.cpp)
target_link_libraries(app PRIVATE glad glfw OpenGL::GL)
